- Large items (such as garbage barell) will be visible from a further distance (in Balanced mode or above)
  - The higher the quality level, the smaller items will be visible from further distance
  - Does not apply for mod items
- In Performance mode, if you enter a vehicle, other vehicles will be disabled sooner
- Added Ko-Fi donation link

### Changes

- If the save file read-only attribute removal has failed, MOP will retry couple more times
- Optimization and general code improvements
- Array of items to enable, disable, and remove now use a generic C#'s Queue implementation
- MOP by default will now toggle items much closer (125 meters for cars, 75 for items)
- Renamed "Normal" active distance to "Default"
- General code improvements and enhancements
- Improved how the dance hall is enabled, on Quality mode
- Dance hall is now visible on Balanced mode, as well as Quality mode
- Cottage is now visible on Balanced mode, as well as Quality mode

### Bug Fixes

- Fixed a rare bug, where sometimes MOP would not have access to the save file
- Fixed not attached fuel tank getting toggled on and off repeatedly
- Fixed "mop rules" command displaying the info about the rules incorrectly
- Fixed a bug, in which MOP would fail to locate correct Satsuma key object
- Fixed masked elements enabling causing error, if the referenced masked element was null
- Beer cases won't play the rattling sound, when enabled and disabled
- Fixed a few typos
- Fixed MOP sometimes preventing you from saving the game
- (Mod Loader Pro) Fixed Disable Empty Items tooltip
- Fixed a bug, where the hood would teleport around when saving, if not attached to the Satsuma, and it being in "disabled" state while saving
- Fixed the envelope not spawning
- Fixed the game data formatting in the bug report
- Fixed the Teimo's advert pile sometimes not spawning