@@ -606,6 +606,14 @@ namespace MOP.Rules.Configuration
                             }
                             RulesManager.Instance.SpecialRules.ToggleAllVehiclesPhysicsOnly = true;
                             break;
+                        case "no_lods":
+                            if (fileName != CustomFile)
+                            {
+                                ModConsole.LogError($"[MOP] Flag: {flag} is only allowed to be used in custom rule file.");
+                                continue;
+                            }
+                            RulesManager.Instance.SpecialRules.NoLods = true;
+                            break;
                     }
                 }
             }
