@@ -25,6 +25,7 @@ namespace MOP.Rules.Types
         #region Custom Rule Files
         public bool IgnoreModVehicles;
         public bool ToggleAllVehiclesPhysicsOnly;
+        public bool NoLods;
         #endregion
     }
 }
